add 3 columns with portfolio pieces, and an about me section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=devicewidth">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -10,7 +11,7 @@
 
   <body>
     <div id="myCarousel" class="carousel slide jumbotron">
-      <div class="container">
+      <div class="fluid.container">
         <div class="carousel-inner"
           <div class="item active">
             <h1>Julia Dickey</h1>
@@ -18,5 +19,51 @@
         <p class="btn">
           <a class="btn">
             <a class="btn btn-success btn-lg" href="mailto:julia.dickey@gmail.com">Let's collaborate</a></p>
+    <div class="row">
+      <div class="col-xs-4">
+        <div class="first">
+        <img src="img/kili_c.jpg" alt="brochure for Charles Schwab">
+        <h3>Kilimanjaro</h3>
+        <p>A site for hikers</p>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div class="second">
+        <img src="img/TommyBrielle_poster.jpg" alt="A wedding poster">
+        <h3>Charles Schwab</h3>
+        <p>Graphic design | UX</p>
+      </div>
+    </div>
+      <div class="col-xs-4">
+        <div class="second">
+        <img src="img/Ipad_vertical2.jpg" alt="Getting kids online">
+        <h3>Red Sweater Project</h3>
+        <p>Getting kids online globally</p>
+      </div>
+
+      </div>
+    </div>
+    <div class="row">
+      <div class="About">
+        <div class="col-xs-12">
+        <h2>About me</h2>
+        <p>I'm a designer <em>turned</em> developer from Portland who loves the trapeze, and kayaking.</p>
+        <Projects>
+        <ul>
+          <li><a href="#">Cupcakes: Madame Lulu's Curious Cupcakes</a></li>
+          <li><a href="#">Band: Fierce Tiger Dodger</a></li>
+          <li><a href="#">Interior design: Elegance in space>/a</li>
+        </ul>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
   </body>
 </html>
