clean up spacing and revise images to match projects

--- a/index.html
+++ b/index.html
@@ -8,62 +8,55 @@
     <meta charset="utf-8">
     <title>Julia Dickey</title>
   </head>
-
   <body>
-    <div id="myCarousel" class="carousel slide jumbotron">
-      <div class="fluid.container">
+    <div class="container">
+      <div id="myCarousel" class="carousel slide jumbotron">
         <div class="carousel-inner"
           <div class="item active">
             <h1>Julia Dickey</h1>
             <p class="lead">Design + Development out of Portland, OR</p>
-        <p class="btn">
-          <a class="btn">
-            <a class="btn btn-success btn-lg" href="mailto:julia.dickey@gmail.com">Let's collaborate</a></p>
+            <p class="btn"><a class="btn btn-success btn-lg" href="mailto:julia.dickey@gmail.com">Let's collaborate</a></p>
+          </div>
+        </div>
+      </div>
     <div class="row">
       <div class="col-xs-4">
         <div class="first">
-        <img src="img/kili_c.jpg" alt="brochure for Charles Schwab">
-        <h3>Kilimanjaro</h3>
-        <p>A site for hikers</p>
+          <img src="img/cupcake.jpg" alt="puppy cupcake">
+          <h3>Cupcakes</h3>
+          <p>Madame Lulu's Cupcakes</p>
+          <a href="#">view site</a>
         </div>
       </div>
       <div class="col-xs-4">
         <div class="second">
-        <img src="img/TommyBrielle_poster.jpg" alt="A wedding poster">
-        <h3>Charles Schwab</h3>
-        <p>Graphic design | UX</p>
+          <img src="img/hair.jpg" alt="Fierce Tiger Dodger">
+          <h3>Fierce Tiger Dodger</h3>
+          <p>A site for brave music</p>
+          <a href="#">view site</a>
+        </div>
       </div>
-    </div>
       <div class="col-xs-4">
         <div class="second">
-        <img src="img/Ipad_vertical2.jpg" alt="Getting kids online">
-        <h3>Red Sweater Project</h3>
-        <p>Getting kids online globally</p>
-      </div>
-
+          <img src="img/Ipad_vertical2.jpg" alt="Getting kids online">
+          <h3>Red Sweater Project</h3>
+          <p>Getting kids online globally</p>
+          <a href="#">view site</a>
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="About">
-        <div class="col-xs-12">
+      <div id="About">
         <h2>About me</h2>
         <p>I'm a designer <em>turned</em> developer from Portland who loves the trapeze, and kayaking.</p>
-        <Projects>
+        <!-- <Projects>
         <ul>
-          <li><a href="#">Cupcakes: Madame Lulu's Curious Cupcakes</a></li>
-          <li><a href="#">Band: Fierce Tiger Dodger</a></li>
-          <li><a href="#">Interior design: Elegance in space>/a</li>
-        </ul>
+        <li><a href="#">Cupcakes: Madame Lulu's Curious Cupcakes</a></li>
+        <li><a href="#">Band: Fierce Tiger Dodger</a></li>
+        <li><a href="#">Interior design: Elegance in space>/a</li>
+        </ul> -->
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
   </body>
 </html>
