Clean up spacing issues, remove extra styles file, and add links to README as well as index

--- a/index.html
+++ b/index.html
@@ -5,57 +5,46 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
     <title>Julia Dickey</title>
   </head>
   <body>
-    <div class="container">
-      <div id="myCarousel" class="carousel slide jumbotron">
-        <div class="carousel-inner"
-          <div class="item active">
-            <h1>Julia Dickey</h1>
-            <p class="lead">Design + Development out of Portland, OR</p>
-            <p class="btn"><a class="btn btn-success btn-lg" href="mailto:julia.dickey@gmail.com">Let's collaborate</a></p>
+    <div class="container-fluid">
+        <h1>Julia Dickey</h1>
+        <p class="lead">Design + Development out of Portland, OR</p>
+        <p class="btn"><a class="btn btn-success btn-lg" href="mailto:julia.dickey@gmail.com">Let's collaborate</a></p>
+      <div class="row">
+        <div class="col-xs-4">
+          <div class="first">
+            <img src="img/cupcake.jpg" alt="puppy cupcake">
+            <h3>Cupcakes</h3>
+            <p>Madame Lulu's Cupcakes</p>
+            <a href="https://github.com/JuliaDickey/cupcakes">view site</a>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="second">
+            <img src="img/hair.jpg" alt="Fierce Tiger Dodger">
+            <h3>Fierce Tiger Dodger</h3>
+            <p>A site for brave music</p>
+            <a href="https://github.com/JuliaDickey/favorite_band">view site</a>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="second">
+            <img src="img/Ipad_vertical2.jpg" alt="Getting kids online">
+            <h3>Red Sweater Project</h3>
+            <p>Getting kids online globally</p>
+            <a href="https://invis.io/2V73VZ9RC">view site</a>
           </div>
         </div>
       </div>
-    <div class="row">
-      <div class="col-xs-4">
-        <div class="first">
-          <img src="img/cupcake.jpg" alt="puppy cupcake">
-          <h3>Cupcakes</h3>
-          <p>Madame Lulu's Cupcakes</p>
-          <a href="#">view site</a>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="second">
-          <img src="img/hair.jpg" alt="Fierce Tiger Dodger">
-          <h3>Fierce Tiger Dodger</h3>
-          <p>A site for brave music</p>
-          <a href="#">view site</a>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="second">
-          <img src="img/Ipad_vertical2.jpg" alt="Getting kids online">
-          <h3>Red Sweater Project</h3>
-          <p>Getting kids online globally</p>
-          <a href="#">view site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div id="About">
-        <h2>About me</h2>
-        <p>I'm a designer <em>turned</em> developer from Portland who loves the trapeze, and kayaking.</p>
-        <!-- <Projects>
-        <ul>
-        <li><a href="#">Cupcakes: Madame Lulu's Curious Cupcakes</a></li>
-        <li><a href="#">Band: Fierce Tiger Dodger</a></li>
-        <li><a href="#">Interior design: Elegance in space>/a</li>
-        </ul> -->
-        </div>
+      <div class="row">
+        <div id="About">
+          <h2>About me</h2>
+          <p>I'm a designer <em>turned</em> developer from Portland who loves the trapeze, and kayaking.</p>
+          </div>
       </div>
     </div>
   </body>
