Remove extra bootstrap theme file, combine CSS for first and second into one, delete unused code

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=devicewidth">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -16,7 +14,7 @@
         <p class="btn"><a class="btn btn-success btn-lg" href="mailto:julia.dickey@gmail.com">Let's collaborate</a></p>
       <div class="row">
         <div class="col-xs-4">
-          <div class="first">
+          <div class="firstsecond">
             <img src="img/cupcake.jpg" alt="puppy cupcake">
             <h3>Cupcakes</h3>
             <p>Madame Lulu's Cupcakes</p>
@@ -24,7 +22,7 @@
           </div>
         </div>
         <div class="col-xs-4">
-          <div class="second">
+          <div class="firstsecond">
             <img src="img/hair.jpg" alt="Fierce Tiger Dodger">
             <h3>Fierce Tiger Dodger</h3>
             <p>A site for brave music</p>
